# blog

./: .gitignore  .gitmodules  Makefile  README.md  README.rst  deploy.yml  develop_server.sh  ideas  justfile  pelicanconf.py  publishconf.py  pyproject.toml  requirements.in  requirements.txt  vhost.j2
content/: always-finish-projects.md  aoc2018d1.md  aoc2018d2.md  bayesian-categorisation.md  bootstrapping-dev-vms.md  bugtracking-thoughts.md  centring-blocks-css.rst  comments-in-weblogs.md  cork-flooded.md  dell-mini-12-repair.md  demystify-gridbag.md  detecting-broken-images-js.md  django-widget-attrs.rst  dsl-finally-activated.md  dsl-modem-arrives.md  dungeon-siege-2-pseudobeta.md  ending-2018.md  ending-2019.md  esperanto-orthography.rst  find-duplicates.md  fowler-on-closures.md  freebsd-shell-keybindings.md  future-magic.rst  google-codejam-2004-2.md  h365-hamster.md  hello-world.rst  how-syncope-works.md  i-love-sage.md  implementing-categories.md  irish-progressives.rst  java-html-scrubber.md  javascript-memoization.md  kwiki-fusionwiki.md  mcdowell-riot-unexpected-crap.md  monads.rst  mosml-pt1.md  notes-dell-mini-12.md  on-not-being-so-fat.md  on-not-being-so-fat.rst  on-rest.md  (+17 more)
content/blog/: agon-light-explorations.md  agon-light.md  always-finish-projects.md  aoc2018d3.md  area51-opens.md  asyncio-clients.md  asyncio-high-level.md  asyncio-interlude-1.md  asyncio-protocols.md  autumn-cleanup.md  bayesian-comment-moderation.md  becoming-two-thirds-the-man-i-was.md  bootstrapping-dev-vms.md  bugger-off-back-up-north.md  doing.md  (+96 more)
plugins/: page_hierarchy.py
(+42 files in other folders)
