[project]
name = "blog"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "html5lib>=1.1",
    "markdown>=3.9",
    "pelican>=4.11.0",
    "pelican-more-categories>=0.1.0",
    "pelican-series>=3.0.0",
    "pelican-sitemap>=1.2.2",
    "typogrify>=2.1.0",
    "tzdata",
]

[tool.uv]
# To play nice with Termux on my Pixel C
link-mode = "copy"
